# bloom_challenge

./: .gitignore  README.md  console.py  pyproject.toml  run.sh  run_api.py  test100.csv
bloom_credit/: extensions.py  factory.py
bloom_credit/api/v1/: exception.py
bloom_credit/api/v1/ma_schema/: consumer_schema.py  consumertagscore_schema.py
bloom_credit/api/v1/sa_routes/: __init__.py  consumer.py
bloom_credit/models/: consumer.py  consumer_tag_score.py  credit_tag.py  saBase.py
migrations/versions/: 49e05cb5a29f_.py  ec21a5e339db_.py
